; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/fst/extr_fst_group.c_fst_group_assign_dialog_token.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/fst/extr_fst_group.c_fst_group_assign_dialog_token.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fst_group = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @fst_group_assign_dialog_token(%struct.fst_group* %0) #0 {
  %2 = alloca %struct.fst_group*, align 8
  store %struct.fst_group* %0, %struct.fst_group** %2, align 8
  %3 = load %struct.fst_group*, %struct.fst_group** %2, align 8
  %4 = getelementptr inbounds %struct.fst_group, %struct.fst_group* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = add nsw i64 %5, 1
  store i64 %6, i64* %4, align 8
  %7 = load %struct.fst_group*, %struct.fst_group** %2, align 8
  %8 = getelementptr inbounds %struct.fst_group, %struct.fst_group* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.fst_group*, %struct.fst_group** %2, align 8
  %13 = getelementptr inbounds %struct.fst_group, %struct.fst_group* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %14, 1
  store i64 %15, i64* %13, align 8
  br label %16

16:                                               ; preds = %11, %1
  %17 = load %struct.fst_group*, %struct.fst_group** %2, align 8
  %18 = getelementptr inbounds %struct.fst_group, %struct.fst_group* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  ret i64 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
